--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -6,6 +6,14 @@
   margin-right: 5px;
 }
 
+.btn.btn-success.wbdv-follow {
+  margin-left: 15px;
+}
+
+.btn.btn-warning.wbdv-unfollow {
+  margin-left: 15px;
+}
+
 .container-fluid.wbdv-profile {
   margin-top: 20px;
   margin-bottom: 20px;
@@ -29,15 +37,15 @@
 
 .center {
   text-align: center;
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   margin-left: 10px;
-  margin-right: 10px;
 }
 
 .wbdv-user-info-component {
   text-align: center;
   margin-top:20px;
+  width: 90%;
   font-size: 25px;
 }
 
