--- a/src/app/recipe-details/recipe-details.component.css
+++ b/src/app/recipe-details/recipe-details.component.css
@@ -49,6 +49,7 @@
   right:10px;
   width: 60px;
   height: 60px;
+  z-index: 12;
 }
 
 .wbdv-like-icon {
@@ -64,9 +65,38 @@
   right:10px;
   width: 60px;
   height: 60px;
+  z-index: 12;
 }
 
 .wbdv-liked-icon {
   color: #e16120;
   font-size: 25px;
 }
+
+.rating {
+  border: none;
+  float: left;
+}
+
+.rating > input { display: none; }
+.rating > label:before {
+  margin: 5px;
+  font-size: 1.25em;
+  font-family: FontAwesome;
+  display: inline-block;
+  content: "\f005";
+}
+
+.rating > label {
+  color: #ddd;
+  float: right;
+}
+
+.rating > input:checked ~ label, /* show gold star when clicked */
+.rating:not(:checked) > label:hover, /* hover current star */
+.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
+
+.rating > input:checked + label:hover, /* hover current star when changing rating */
+.rating > input:checked ~ label:hover,
+.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
+.rating > input:checked ~ label:hover ~ label { color: #FFED85;  }
