--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -1,6 +1,7 @@
 <app-search-bar></app-search-bar>
 
 <div class="container">
+
   <div class="row">
     <div class="col-6">
       <div class="wbdv-image-wrap">
@@ -32,7 +33,8 @@
       <span class="value">{{ingredientsCount}}</span>
       <label>Ingredients</label>
     </div>
-    <div class="wbdv-recipe-summary-item nutrition" *ngIf="recipeDetails['numberOfServings']">
+    <div class="wbdv-recipe-summary-item nutrition"
+         *ngIf="recipeDetails['numberOfServings']">
       <span class="value">{{recipeDetails['numberOfServings']}}</span>
       <label>Servings</label>
     </div>
@@ -50,18 +52,81 @@
     </li>
   </ul>
 
-  <input class="form-control"
-         placeholder="Rating from 1-5"
-         [(ngModel)]="rating">
-  <input class="form-control"
-         *ngIf="currentUser.role === 'Critic'"
-         placeholder="Critic's Review"
-         [(ngModel)]="criticReview">
-  <button (click)="rate(rating,criticReview)"
-          class="btn btn-success">
-    Rate
-  </button>
+  <h4>How much did you like {{recipeDetails['name']}}?</h4>
 
+  <div class="rating">
+    <input type="radio"
+           id="star5"
+           name="rating"
+           [checked] = "newRating === 5"
+           (click)="changeRating(5)"/>
+    <label class="full"
+           for="star5"
+           title="OUTSTANDING">
+    </label>
+    <input type="radio"
+           id="star4"
+           name="rating"
+           [checked] = "newRating === 4"
+           (click)="changeRating(4)"/>
+    <label class="full"
+           for="star4"
+           title="REALLY GOOD">
+    </label>
+    <input type="radio"
+           id="star3"
+           name="rating"
+           [checked] = "newRating === 3"
+           (click)="changeRating(3)"/>
+    <label class="full"
+           for="star3"
+           title="JUST GOOD">
+    </label>
+    <input type="radio"
+           id="star2"
+           name="rating"
+           [checked] = "newRating === 2"
+           (click)="changeRating(2)"/>
+    <label class="full"
+           for="star2"
+           title="SO SO">
+    </label>
+    <input type="radio"
+           id="star1"
+           name="rating"
+           [checked] = "newRating === 1"
+           (click)="changeRating(1)"/>
+    <label class="full"
+           for="star1"
+           title="DIDN'T LIKE IT">
+    </label>
+  </div>
+  <br><br>
+
+  <div class="form-group"
+       *ngIf="currentUser.role === 'Critic' && newRating !== 0">
+    <textarea [(ngModel)]="newReview"
+              rows="4"
+              placeholder="Write something about {{recipeDetails['name']}}"
+              class="form-control">
+    </textarea>
+  </div>
+
+  <div *ngIf="newRating !== 0 && myRatingId === ''">
+    <button (click)="rate()"
+            class="btn btn-dark">
+      Submit
+    </button>
+  </div>
+
+  <div *ngIf="newRating !== 0 && myRatingId !== ''">
+    <button (click)="updateRating()"
+            class="btn btn-dark">
+      Update
+    </button>
+  </div>
+
+  <hr>
   <h2>
     Ratings
   </h2>
