--- a/src/app/recipe-details/recipe-details.component.css
+++ b/src/app/recipe-details/recipe-details.component.css
@@ -24,7 +24,7 @@
 }
 
 .wbdv-recipe-summary-item .value {
-  font-family: Helvetica Neue,Roboto Thin,Roboto Light,Roboto,HelveticaNeue Light,Helvetica Neue Light,Segoe UI,sans-serif;
+  font-family: Helvetica Neue, Roboto Thin, Roboto Light, Roboto, HelveticaNeue Light, Helvetica Neue Light, Segoe UI, sans-serif;
   font-weight: 100;
   font-size: 2.25em;
   color: #e16120;
@@ -37,16 +37,16 @@
 }
 
 .wbdv-image-wrap {
-  display:inline-block;
-  position:relative;
+  display: inline-block;
+  position: relative;
 }
 
 .wbdv-like-button {
   border-radius: 35px;
   background-color: #F3F3F3;
-  position:absolute;
-  bottom:10px;
-  right:10px;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
   width: 60px;
   height: 60px;
   z-index: 12;
@@ -60,9 +60,9 @@
 .wbdv-liked-button {
   border-radius: 35px;
   background-color: #343A40;
-  position:absolute;
-  bottom:10px;
-  right:10px;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
   width: 60px;
   height: 60px;
   z-index: 12;
@@ -73,13 +73,20 @@
   font-size: 25px;
 }
 
-.rating {
+.wbdv-group-item {
+  cursor: pointer;
+}
+
+.wbdv-rating {
   border: none;
   float: left;
 }
 
-.rating > input { display: none; }
-.rating > label:before {
+.wbdv-rating > input {
+  display: none;
+}
+
+.wbdv-rating > label:before {
   margin: 5px;
   font-size: 1.25em;
   font-family: FontAwesome;
@@ -87,16 +94,60 @@
   content: "\f005";
 }
 
-.rating > label {
+.wbdv-rating > label {
   color: #ddd;
   float: right;
 }
 
-.rating > input:checked ~ label, /* show gold star when clicked */
-.rating:not(:checked) > label:hover, /* hover current star */
-.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
+.wbdv-rating > input:checked ~ label, /* show gold star when clicked */
+.wbdv-rating:not(:checked) > label:hover, /* hover current star */
+.wbdv-rating:not(:checked) > label:hover ~ label {
+  color: #FFD700;
+}
 
-.rating > input:checked + label:hover, /* hover current star when changing rating */
-.rating > input:checked ~ label:hover,
-.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
-.rating > input:checked ~ label:hover ~ label { color: #FFED85;  }
+/* hover previous stars in list */
+
+.wbdv-rating > input:checked + label:hover, /* hover current star when changing rating */
+.wbdv-rating > input:checked ~ label:hover,
+.wbdv-rating > label:hover ~ input:checked ~ label, /* lighten current selection */
+.wbdv-rating > input:checked ~ label:hover ~ label {
+  color: #FFED85;
+}
+
+
+
+.wbdv-rated {
+  border: none;
+  float: right;
+}
+
+.wbdv-rated .highlight ~ label {
+  color: #FFD700;
+}
+
+.wbdv-rated > input {
+  display: none;
+}
+
+.wbdv-rated > label:before {
+  margin: 5px;
+  font-size: 1.25em;
+  font-family: FontAwesome;
+  display: inline-block;
+  content: "\f005";
+}
+
+.wbdv-rated > label {
+  color: #ddd;
+  float: right;
+}
+
+.wbdv-linebreaks {
+  white-space:pre;
+}
+
+.wbdv-review {
+  white-space: normal;
+  width: 100%;
+  word-wrap: break-word;
+}
