--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -54,11 +54,24 @@
 
   <h4>How much did you like {{recipeDetails['name']}}?</h4>
 
-  <div class="rating">
+  <div class="alert alert-success alert-dismissible fade show"
+       role="alert"
+       *ngIf="alertReview == true">
+    Rating submitted successfully
+    <button type="button"
+            class="close"
+            data-dismiss="alert"
+            (click)="removeReviewAlert()"
+            aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
+  <div class="wbdv-rating">
     <input type="radio"
            id="star5"
            name="rating"
-           [checked] = "newRating === 5"
+           [checked]="newRating === 5"
            (click)="changeRating(5)"/>
     <label class="full"
            for="star5"
@@ -67,7 +80,7 @@
     <input type="radio"
            id="star4"
            name="rating"
-           [checked] = "newRating === 4"
+           [checked]="newRating === 4"
            (click)="changeRating(4)"/>
     <label class="full"
            for="star4"
@@ -76,7 +89,7 @@
     <input type="radio"
            id="star3"
            name="rating"
-           [checked] = "newRating === 3"
+           [checked]="newRating === 3"
            (click)="changeRating(3)"/>
     <label class="full"
            for="star3"
@@ -85,7 +98,7 @@
     <input type="radio"
            id="star2"
            name="rating"
-           [checked] = "newRating === 2"
+           [checked]="newRating === 2"
            (click)="changeRating(2)"/>
     <label class="full"
            for="star2"
@@ -94,7 +107,7 @@
     <input type="radio"
            id="star1"
            name="rating"
-           [checked] = "newRating === 1"
+           [checked]="newRating === 1"
            (click)="changeRating(1)"/>
     <label class="full"
            for="star1"
@@ -127,28 +140,99 @@
   </div>
 
   <hr>
-  <h2>
-    Ratings
-  </h2>
 
-  <ul class="list-group wbdv-recipe">
-    <li *ngFor="let ratedUser of ratedUsers"
-        class="list-group-item">
-      <a routerLink="/profile/{{ratedUser.user.username}}">{{ratedUser.user.username}}</a>
-      <span> {{ratedUser.rating}}</span>
-    </li>
-  </ul>
-
-  <h2>
+  <h4>
     Critic's Reviews
-  </h2>
+  </h4>
 
   <ul class="list-group wbdv-recipe">
     <li *ngFor="let reviewedUser of reviewedUsers"
-        class="list-group-item">
-      <a routerLink="/profile/{{reviewedUser.user.username}}">{{reviewedUser.user.username}}</a>
-      <span> {{reviewedUser.rating}}</span>
-      <span> {{reviewedUser.review}}</span>
+        (click)="goToUserProfile(reviewedUser.user.username)"
+        class="list-group-item wbdv-group-item wbdv-linebreaks">
+      <h5>{{reviewedUser.user.username}}</h5>
+
+      <div class="wbdv-rated">
+        <input type="radio"
+               id="star5b"
+               [ngClass]="{highlight: reviewedUser.rating === 5}"/>
+        <label for="star5b"
+               title="OUTSTANDING">
+        </label>
+        <input type="radio"
+               id="star4b"
+               [ngClass]="{highlight: reviewedUser.rating === 4}"/>
+        <label for="star4b"
+               title="REALLY GOOD">
+        </label>
+        <input type="radio"
+               id="star3b"
+               [ngClass]="{highlight: reviewedUser.rating === 3}"/>
+        <label for="star3b"
+               title="JUST GOOD">
+        </label>
+        <input type="radio"
+               id="star2b"
+               [ngClass]="{highlight: reviewedUser.rating === 2}"/>
+        <label for="star2b"
+               title="SO SO">
+        </label>
+        <input type="radio"
+               id="star1b"
+               [ngClass]="{highlight: reviewedUser.rating === 1}"/>
+        <label for="star1b"
+               title="DIDN'T LIKE IT">
+        </label>
+      </div>
+
+      <span class="wbdv-review">{{reviewedUser.review}}</span>
+
     </li>
   </ul>
+
+  <h4>
+    Ratings
+  </h4>
+
+  <ul class="list-group wbdv-recipe">
+    <li *ngFor="let ratedUser of ratedUsers"
+        (click)="goToUserProfile(ratedUser.user.username)"
+        class="list-group-item wbdv-group-item">
+      {{ratedUser.user.username}}
+
+      <div class="wbdv-rated">
+        <input type="radio"
+               id="star5a"
+               [ngClass]="{highlight: ratedUser.rating === 5}"/>
+        <label for="star5a"
+               title="OUTSTANDING">
+        </label>
+        <input type="radio"
+               id="star4a"
+               [ngClass]="{highlight: ratedUser.rating === 4}"/>
+        <label for="star4a"
+               title="REALLY GOOD">
+        </label>
+        <input type="radio"
+               id="star3a"
+               [ngClass]="{highlight: ratedUser.rating === 3}"/>
+        <label for="star3a"
+               title="JUST GOOD">
+        </label>
+        <input type="radio"
+               id="star2a"
+               [ngClass]="{highlight: ratedUser.rating === 2}"/>
+        <label for="star2a"
+               title="SO SO">
+        </label>
+        <input type="radio"
+               id="star1a"
+               [ngClass]="{highlight: ratedUser.rating === 1}"/>
+        <label for="star1a"
+               title="DIDN'T LIKE IT">
+        </label>
+      </div>
+
+    </li>
+  </ul>
+
 </div>
