changes to profile and recipe details

--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -142,7 +142,7 @@
   <hr>
 
   <h4>
-    Critic's Reviews
+    Critic's Reviews ({{reviewedUsers.length}})
   </h4>
 
   <ul class="list-group wbdv-recipe">
@@ -190,7 +190,7 @@
   </ul>
 
   <h4>
-    Ratings
+    Ratings ({{ratedUsers.length}})
   </h4>
 
   <ul class="list-group wbdv-recipe">
