added links to eze-cuisine recipes from profile and user-profile component

--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -57,6 +57,10 @@
   cursor: pointer;
 }
 
+.list-group-item.wbdv-created-recipe {
+  cursor: pointer;
+}
+
 .list-group-item.wbdv-follower {
   cursor: pointer;
 }
