--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -35,6 +35,10 @@
   cursor: pointer;
 }
 
+.list-group-item.wbdv-created-recipe {
+  cursor: pointer;
+}
+
 .list-group-item.wbdv-follower {
   cursor: pointer;
 }
