--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -270,8 +270,9 @@
     </button>
 
     <ul class="list-group">
-      <li class="list-group-item"
-          *ngFor="let recipe of createdRecipes">
+      <li class="list-group-item wbdv-created-recipe"
+          *ngFor="let recipe of createdRecipes"
+          (click) = "navigateToEzeRecipe(recipe)">
         {{recipe.name}}
       </li>
     </ul>
