updating index title

--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -6,7 +6,7 @@
       <!--width="120">-->
       <h3 class="navbar-brand"
           (click)="goHome()">
-        Eze-Cuisine
+        Eze Cuisine
       </h3>
     </div>
     <div class="col-7">
