--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -32,13 +32,24 @@
       <span class="value">{{ingredientsCount}}</span>
       <label>Ingredients</label>
     </div>
-    <div class="wbdv-recipe-summary-item nutrition"
-         *ngIf="recipeDetails['numberOfServings']">
-      <span class="value">{{recipeDetails['numberOfServings']}}</span>
+    <div class="wbdv-recipe-summary-item nutrition">
+      <span class="value"
+            *ngIf="recipeDetails['numberOfServings']">
+        {{recipeDetails['numberOfServings']}}
+      </span>
+      <span class="value"
+            *ngIf="!recipeDetails['numberOfServings']">
+        ---
+      </span>
       <label>Servings</label>
     </div>
     <div class="wbdv-recipe-summary-item">
       <span class="value">{{totalTime}}</span>
+      <span class="value"
+            *ngIf="!recipeDetails['totalTime']">
+        ---
+      </span>
+      <label *ngIf="!recipeDetails['totalTime']">mins</label>
       <label>{{totalTimeUnit}}</label>
     </div>
   </div>
