--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -6,6 +6,9 @@
       <!--width="120">-->
       <h3 class="navbar-brand"
           (click)="goHome()">
+        <img src="http://icons-for-free.com/icon/download-burger_cheeseburger_fast_food_food_junk_food_icon-7567.ico"
+             width="35px"
+             height="35px">
         Eze Cuisine
       </h3>
     </div>
@@ -41,11 +44,11 @@
       </div>
       <div *ngIf="currentUser['username']">
         <h3 class="navbar-brand float-right">
-          Logged in:
-          <a routerLink="/profile"
-             class="wbdv-username-anchor">
+          <div (click)="goToProfile()"
+               class="wbdv-username-anchor">
             {{currentUser['username']}}
-          </a>
+            <i class="fa fa-lg fa-user-circle-o"></i>
+          </div>
         </h3>
       </div>
     </div>
