--- a/src/app/search-bar/search-bar.component.css
+++ b/src/app/search-bar/search-bar.component.css
@@ -3,6 +3,13 @@
   margin-bottom: 50px;
 }
 
+.navbar {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 2;
+}
+
 .wbdv-navbar .navbar-brand {
   cursor: pointer;
 }
