--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -1,3 +1,10 @@
+.wbdv-navbar {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 2;
+}
+
 .list-group.wbdv-profile {
   margin-top: 20px;
 }
