--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -22,12 +22,11 @@
       </a>
     </div>
     <div *ngIf="currentUser['username']">
-      <h3 class="navbar-brand float-right">
-        Logged in:
-        <a routerLink="/profile"
-           class="wbdv-username-anchor">
+      <h3 class="navbar-brand float-right wbdv-username">
+        <div (click)="goToProfile()">
           {{currentUser['username']}}
-        </a>
+          <i class="fa fa-lg fa-user-circle-o"></i>
+        </div>
       </h3>
     </div>
   </form>
