--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -94,7 +94,7 @@
       <li *ngFor="let likedRecipe of likedRecipes"
           (click)="navigateToRecipe(likedRecipe)"
           class="list-group-item wbdv-liked-recipe">
-        {{likedRecipe.recipe.name}}
+        <b>{{likedRecipe.recipe.name}}</b>
       </li>
     </ul>
   </div>
@@ -152,7 +152,7 @@
       <li *ngFor="let follower of followers"
           (click)="navigateToFollowerProfile(follower)"
           class="list-group-item wbdv-follower">
-        {{follower.from.username}}
+        <b>{{follower.from.username}}</b>
       </li>
     </ul>
   </div>
@@ -163,7 +163,7 @@
       <li *ngFor="let following of followings"
           (click)="navigateToFollowingProfile(following)"
           class="list-group-item wbdv-following">
-        {{following.to.username}}
+        <b>{{following.to.username}}</b>
       </li>
     </ul>
   </div>
@@ -174,7 +174,7 @@
       <li class="list-group-item wbdv-created-recipe"
           *ngFor="let recipe of createdRecipes"
           (click)="navigateToEzeRecipe(recipe)">
-        {{recipe.name}}
+        <b>{{recipe.name}}</b>
       </li>
     </ul>
   </div>
