admin can no longer like, follow, rate or review

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -44,7 +44,7 @@
        class="center">
   {{user.username}}
   <button class="btn btn-success wbdv-follow"
-          *ngIf="!(this.currentUser.username) || !isUserFollowed"
+          *ngIf="!(currentUser.username) || !isUserFollowed && currentUser.role !== 'Admin'"
           (click)="follow()">
     Follow
   </button>
