--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -9,12 +9,12 @@
              *ngIf="recipeDetails['imageUrl']"
              src="{{recipeDetails['imageUrl']}}">
         <button class="btn wbdv-like-button"
-                *ngIf="!(this.currentUser.username) || !isRecipeLiked"
+                *ngIf="!(currentUser.username) || !isRecipeLiked && currentUser.role !== 'Admin'"
                 (click)="like()">
           <i class="fa fa-heart-o wbdv-like-icon"></i>
         </button>
         <button class="btn wbdv-liked-button"
-                *ngIf="isRecipeLiked"
+                *ngIf="isRecipeLiked && currentUser.role !== 'Admin'"
                 (click)="unlike()">
           <i class="fa fa-heart wbdv-liked-icon"></i>
         </button>
@@ -62,92 +62,94 @@
     </li>
   </ul>
 
-  <h4>How much did you like {{recipeDetails['name']}}?</h4>
+  <span *ngIf="currentUser.role !== 'Admin'">
+    <h4>How much did you like {{recipeDetails['name']}}?</h4>
 
-  <div class="alert alert-success alert-dismissible fade show"
-       role="alert"
-       *ngIf="alertReview == true">
-    Rating submitted successfully
-    <button type="button"
-            class="close"
-            data-dismiss="alert"
-            (click)="removeReviewAlert()"
-            aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
+    <div class="alert alert-success alert-dismissible fade show"
+         role="alert"
+         *ngIf="alertReview == true">
+      Rating submitted successfully
+      <button type="button"
+              class="close"
+              data-dismiss="alert"
+              (click)="removeReviewAlert()"
+              aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
 
-  <div class="wbdv-rating">
-    <input type="radio"
-           id="star5"
-           name="rating"
-           [checked]="newRating === 5"
-           (click)="changeRating(5)"/>
-    <label class="full"
-           for="star5"
-           title="OUTSTANDING">
-    </label>
-    <input type="radio"
-           id="star4"
-           name="rating"
-           [checked]="newRating === 4"
-           (click)="changeRating(4)"/>
-    <label class="full"
-           for="star4"
-           title="REALLY GOOD">
-    </label>
-    <input type="radio"
-           id="star3"
-           name="rating"
-           [checked]="newRating === 3"
-           (click)="changeRating(3)"/>
-    <label class="full"
-           for="star3"
-           title="JUST GOOD">
-    </label>
-    <input type="radio"
-           id="star2"
-           name="rating"
-           [checked]="newRating === 2"
-           (click)="changeRating(2)"/>
-    <label class="full"
-           for="star2"
-           title="SO SO">
-    </label>
-    <input type="radio"
-           id="star1"
-           name="rating"
-           [checked]="newRating === 1"
-           (click)="changeRating(1)"/>
-    <label class="full"
-           for="star1"
-           title="DIDN'T LIKE IT">
-    </label>
-  </div>
-  <br><br>
+    <div class="wbdv-rating">
+      <input type="radio"
+             id="star5"
+             name="rating"
+             [checked]="newRating === 5"
+             (click)="changeRating(5)"/>
+      <label class="full"
+             for="star5"
+             title="OUTSTANDING">
+      </label>
+      <input type="radio"
+             id="star4"
+             name="rating"
+             [checked]="newRating === 4"
+             (click)="changeRating(4)"/>
+      <label class="full"
+             for="star4"
+             title="REALLY GOOD">
+      </label>
+      <input type="radio"
+             id="star3"
+             name="rating"
+             [checked]="newRating === 3"
+             (click)="changeRating(3)"/>
+      <label class="full"
+             for="star3"
+             title="JUST GOOD">
+      </label>
+      <input type="radio"
+             id="star2"
+             name="rating"
+             [checked]="newRating === 2"
+             (click)="changeRating(2)"/>
+      <label class="full"
+             for="star2"
+             title="SO SO">
+      </label>
+      <input type="radio"
+             id="star1"
+             name="rating"
+             [checked]="newRating === 1"
+             (click)="changeRating(1)"/>
+      <label class="full"
+             for="star1"
+             title="DIDN'T LIKE IT">
+      </label>
+    </div>
+    <br><br>
 
-  <div class="form-group"
-       *ngIf="currentUser.role === 'Critic' && newRating !== 0">
-    <textarea [(ngModel)]="newReview"
-              rows="4"
-              placeholder="Write something about {{recipeDetails['name']}}"
-              class="form-control">
-    </textarea>
-  </div>
+    <div class="form-group"
+         *ngIf="currentUser.role === 'Critic' && newRating !== 0">
+      <textarea [(ngModel)]="newReview"
+                rows="4"
+                placeholder="Write something about {{recipeDetails['name']}}"
+                class="form-control">
+      </textarea>
+    </div>
 
-  <div *ngIf="newRating !== 0 && myRatingId === ''">
-    <button (click)="rate()"
-            class="btn btn-dark">
-      Submit
-    </button>
-  </div>
+    <div *ngIf="newRating !== 0 && myRatingId === ''">
+      <button (click)="rate()"
+              class="btn btn-dark">
+        Submit
+      </button>
+    </div>
 
-  <div *ngIf="newRating !== 0 && myRatingId !== ''">
-    <button (click)="updateRating()"
-            class="btn btn-dark">
-      Update
-    </button>
-  </div>
+    <div *ngIf="newRating !== 0 && myRatingId !== ''">
+      <button (click)="updateRating()"
+              class="btn btn-dark">
+        Update
+      </button>
+    </div>
+  </span>
 
   <hr>
 
