users can now search for recipes from their user profile as well

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,6 +1,31 @@
-<nav class="navbar navbar-dark bg-dark justify-content-between wbdv-navbar">
-  <h3 class="navbar-brand">{{user.username}}</h3>
-  <form class="form-inline">
+<nav class="navbar navbar-dark bg-dark justify-content-between wbdv-navbar row">
+
+  <div class="col-2">
+    <h3 class="navbar-brand"
+        (click)="goHome()">
+      {{user.username}}
+    </h3>
+  </div>
+
+  <div class="col-7">
+    <div class="row">
+      <div class="col-11 wbdv-search-input">
+        <input class="form-control"
+               [(ngModel)]="searchText"
+               (keyup.enter)="navigate(searchText)"
+               placeholder="Search for recipes"/>
+      </div>
+      <button type="button"
+              (click)="navigate(searchText)"
+              class="btn btn-dark wbdv-search-button">
+        <span class="fa fa-search"></span>
+      </button>
+    </div>
+  </div>
+
+  <!--<h3 class="navbar-brand">{{user.username}}</h3>-->
+  <div class="col-3">
+  <form class="form-inline float-right">
     <a routerLink="/home">
       <button class="btn btn-outline-light my-2 my-sm-0"
               type="button">
@@ -30,6 +55,8 @@
       </h3>
     </div>
   </form>
+  </div>
+
 </nav>
 
 <div class="wbdv-user-info-component">
