--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,25 +1,49 @@
-<nav class="navbar navbar-dark bg-dark justify-content-between wbdv-navbar">
-  <h3 class="navbar-brand">Profile</h3>
-  <form class="form-inline">
-    <button class="btn btn-outline-light my-2 my-sm-0"
-            (click)="logout()"
-            type="button">
-      Logout
-    </button>
-    <a routerLink="/home">
-      <button class="btn btn-outline-light my-2 my-sm-0"
-              type="button">
-        Home
+<nav class="navbar navbar-dark bg-dark justify-content-between wbdv-navbar row">
+
+  <div class="col-2">
+    <h3 class="navbar-brand">
+      Profile
+    </h3>
+  </div>
+
+  <div class="col-7">
+    <div class="row">
+      <div class="col-11 wbdv-search-input">
+        <input class="form-control"
+               [(ngModel)]="searchText"
+               (keyup.enter)="navigate(searchText)"
+               placeholder="Search for recipes"/>
+      </div>
+      <button type="button"
+              (click)="navigate(searchText)"
+              class="btn btn-dark wbdv-search-button">
+        <span class="fa fa-search"></span>
       </button>
-    </a>
-    <a routerLink="/admin">
-    <button class="btn btn-outline-light my-2 my-sm-0"
-    *ngIf="user['role'] === 'Admin'"
-    type="button">
-    Admin Page
-    </button>
-    </a>
-  </form>
+    </div>
+  </div>
+
+  <div class="col-3">
+    <form class="form-inline float-right">
+      <button class="btn btn-outline-light my-2 my-sm-0"
+              (click)="logout()"
+              type="button">
+        Logout
+      </button>
+      <a routerLink="/home">
+        <button class="btn btn-outline-light my-2 my-sm-0"
+                type="button">
+          Home
+        </button>
+      </a>
+      <a routerLink="/admin">
+      <button class="btn btn-outline-light my-2 my-sm-0"
+      *ngIf="user['role'] === 'Admin'"
+      type="button">
+      Admin Page
+      </button>
+      </a>
+    </form>
+  </div>
 </nav>
 
 <div class="container-fluid wbdv-profile">
