--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,8 +1,7 @@
 <nav class="navbar navbar-dark bg-dark justify-content-between wbdv-navbar row">
 
   <div class="col-2">
-    <h3 class="navbar-brand"
-        (click)="goHome()">
+    <h3 class="navbar-brand">
       {{user.username}}
     </h3>
   </div>
@@ -23,7 +22,6 @@
     </div>
   </div>
 
-  <!--<h3 class="navbar-brand">{{user.username}}</h3>-->
   <div class="col-3">
   <form class="form-inline float-right">
     <a routerLink="/home">
